--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
+    "antd": "^4.16.0",
+    "bootstrap": "^5.0.1",
     "next": "10.2.3",
+    "postcss": "^8.3.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.34.0"
   }
 }
