--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postcss": "^8.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-slick": "^0.28.1",
     "sass": "^1.34.0"
   }
 }
