--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -28,6 +28,8 @@ jobs:
         
     - run: npm ci
     - run: npm run build
+    - run: touch ./out/.nojekyll
+    
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@4.1.3
       with:
