--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -28,7 +28,8 @@ jobs:
         
     - run: npm ci
     - run: npm run build
-  
+    - run: touch run export
+    - run: touch ./out/.nojekyll
     
     - name: Deploy 🚀
       uses: JamesIves/github-pages-deploy-action@4.1.3
