--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -28,7 +28,7 @@ jobs:
         
     - run: npm ci
     - run: npm run build
-    - run: touch run export
+    - run: npm run export
     - run: touch ./out/.nojekyll
     
     - name: Deploy 🚀
