--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "^15.2.4",
     "next-mdx-remote": "^5.0.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-share": "^5.2.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
